# routes/api.php
@@ -144,6 +144,7 @@ Route::delete('associer/{id_surveillant}/{id_affectation}',[associerController::
 //});
 Route::post('tablette/create',[tabletteController::class,'store']);
 Route::post('tablette/getEtat',[tabletteController::class,'getEtat']);
+Route::post('tablette/getPV',[tabletteController::class,'getPV']);
 
 Route::post('administrateur/create',[AdministrateurController::class,'store']);
 Route::post('auth/login',[authcontroller::class,'login']);
